<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/presentation_mode"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".presentationmode.PresentationMode" >

    <TextView
        android:id="@+id/presentation_mode_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/presentation_title"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/slide_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/presentation_control_panel"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/presentation_mode_title"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/presentation_control_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <Button
            android:id="@+id/left_arrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/left_arrow" 
            android:onClick="leftArrow"/>

        <Button
            android:id="@+id/down_arrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/down_arrow" 
            android:onClick="downArrow"/>

        <Button
            android:id="@+id/up_arrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/up_arrow" 
            android:onClick="upArrow"/>

        <Button
            android:id="@+id/right_arrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/right_arrow" 
            android:onClick="rightArrow"/>
    </LinearLayout>

</RelativeLayout>